--- a/HW0/HW0.vcxproj
+++ b/HW0/HW0.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="HW0.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="JekyllHyde.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
