--- a/HW01/HW01.vcxproj.filters
+++ b/HW01/HW01.vcxproj.filters
@@ -19,4 +19,26 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Library.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="766-0.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="52521-0.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="pg514.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="pg2267.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="pg64317.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
