--- a/Labs/Labs.vcxproj
+++ b/Labs/Labs.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Labs.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Lab2.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
