--- a/Labs/Labs.vcxproj
+++ b/Labs/Labs.vcxproj
@@ -144,6 +144,9 @@
   <ItemGroup>
     <ClInclude Include="Lab2.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="goodevening.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
