--- a/Labs/Labs.vcxproj.filters
+++ b/Labs/Labs.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="Labs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="staticTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lab2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Lab7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lab9.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
