--- a/HW02/HW02.vcxproj
+++ b/HW02/HW02.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="HW02.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="catch.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
