--- a/HW03/HW03.vcxproj.filters
+++ b/HW03/HW03.vcxproj.filters
@@ -30,4 +30,9 @@
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="DOOM1.WAD">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
