HW04 A2 finished, A1 postponed

--- a/HW04/HW04.vcxproj
+++ b/HW04/HW04.vcxproj
@@ -143,6 +143,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box.h" />
+    <ClInclude Include="Containers.h" />
+    <ClInclude Include="Memory.h" />
+    <ClInclude Include="Streams.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="streams.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
