--- a/HW04/HW04.vcxproj
+++ b/HW04/HW04.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Containers.h" />
     <ClInclude Include="Memory.h" />
     <ClInclude Include="Streams.h" />
+    <ClInclude Include="Wump.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="streams.txt" />
