--- a/HW04/HW04.vcxproj.filters
+++ b/HW04/HW04.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="Memory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Wump.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="streams.txt">
